--- a/docs/.vuepress/style.styl
+++ b/docs/.vuepress/style.styl
@@ -48,3 +48,16 @@ h3{
 table th:first-of-type {
 	width: 100px;
 }
+
+//下拉三角样式
+.arrow.down{
+  border-top: 6px solid #1893ff;
+}
+.arrow.right{
+  border-left: 6px solid #1893ff;
+}
+//侧边栏文字(有分组的)颜色
+
+.sidebar-heading{
+  color: #2c3e50;
+}
