--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -5,9 +5,9 @@
 
 
 //sidebar
-.sidebar .sidebar-links {
-  padding: 1.5rem 1.5rem !important;  
-}
+// .sidebar .sidebar-links {
+//   padding: 1.5rem 1.5rem !important;  
+// }
 
 
 .sidebar .sidebar-links li {
